# argos_agent

./: .gitignore  404.html  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: deploy-book.yml
Master-Documentation/: book.toml
Master-Documentation/src/: SUMMARY.md
PID_PP/: pid.html  pp.html
argos_agent/: CMakeLists.txt  package.xml
argos_agent/include/argos_agent/: argos_agent.h
argos_agent/launch/: argos_agent.launch
argos_agent/src/: argos_agent.cpp  argos_agent_node.cpp
base/: .gitignore  .pre-commit-config.yaml  CPPLINT.cfg  README.md  requirements.txt
base/freicar_agent/: CMakeLists.txt  README.md  frames.gv  package.xml
base/freicar_agent/include/freicar_agent/: agent.h
base/freicar_agent/launch/: freicar_agent.launch  freicar_agent_hw.launch
base/freicar_agent/scripts/: generate_urdf.sh
base/freicar_agent/src/: agent.cpp  agent_node.cpp
base/freicar_agent/urdf/: freicar_placeholder.xml
base/freicar_carla_map/: CMakeLists.txt  FindThrift.cmake  README.MD  package.xml
base/freicar_carla_map/MapCore/: CMakeLists.txt.deprecated  Readme.md
base/freicar_carla_map/MapCore/include/map_core/: freicar_carla_map.h  freicar_carla_map_config.h  freicar_carla_map_helper.h  freicar_carla_map_objects.h  freicar_type_conversion.h
base/freicar_carla_map/MapCore/src/: Map.cpp.deprecated  freicar_carla_map.cpp  freicar_carla_map_helper.cpp  freicar_carla_map_objects.cpp  freicar_type_conversion.cpp
base/freicar_carla_map/MapThrift/: Readme.md  makeThrift.sh  map_data_structure.thrift
base/freicar_carla_map/MapThrift/gen-cpp/: MapComm.cpp  MapComm.h  MapComm_server.skeleton.cpp  map_data_structure_constants.cpp  map_data_structure_constants.h  map_data_structure_types.cpp  map_data_structure_types.h
base/freicar_carla_map/MapThrift/gen-py/map_thrift/: MapComm.py
base/freicar_carla_map/include/freicar_carla_map/: planner_cmd.h  thrift_map_proxy.h
base/freicar_carla_map/include/freicar_carla_map/logic/: map_info.h  right_of_way.h
base/freicar_carla_map/include/freicar_carla_map/planning/: joint_planner.h  lane_follower.h  lane_star.h  plan.h
base/freicar_carla_map/launch/: ros_map_framework.launch  start_ar_tracker.launch
base/freicar_carla_map/msg/: FreiCarAgentLocalization.msg
base/freicar_carla_map/src/: main.cpp  thrift_map_proxy.cpp
base/freicar_carla_map/src/logic/: map_info.cpp  right_of_way.cpp
base/freicar_carla_map/src/planning/: lane_follower.cpp  lane_star.cpp
base/freicar_carla_proxy/: CMakeLists.txt  README.MD  package.xml
base/freicar_carla_proxy/include/freicar_carla_proxy/: agent_config.h  bicycle_model.h  freicar_carla_proxy.h  pid_controller.h  sensor_structs.h
base/freicar_carla_proxy/param/: sensors.yaml
base/freicar_carla_proxy/src/: bicycle_model.cpp  freicar_carla_proxy.cpp  main.cpp  pid_controller.cpp
base/freicar_carla_proxy/srv/: SetPosition.srv
base/freicar_chaperone/: CMakeLists.txt  README.md  package.xml  record-fence.sh
base/freicar_chaperone/data/: fence.bag
base/freicar_chaperone/include/: Chaperone.h  Collision.h  Footprint.h  GeoFence.h  MovingAverage.h  TrackedAgent.h
base/freicar_chaperone/launch/: freicar_chaperone.launch
base/freicar_chaperone/src/: Chaperone.cpp  Footprint.cpp  GeoFence.cpp  TrackedAgent.cpp  freicar_chaperone_node.cpp
base/freicar_launch/: CMakeLists.txt  package.xml
base/freicar_launch/cfg/zed_params/: common.yaml  common_with_tf.yaml  zed.yaml
base/freicar_launch/launch/: rs_d435_and_t265.launch  spawn_sim_car.launch  start_carla.launch  start_sensors.launch  zed_no_tf.launch
base/freicar_launch/params/: common.yaml
base/freicar_launch/scripts/: start_sim.sh
base/freicar_launch/spawn_positions/: freicar_1_spawn.yaml  freicar_2_spawn.yaml  freicar_race_1_spawn.yaml
base/freicar_msgs/: CMakeLists.txt  README.md  package.xml
base/freicar_msgs/msg/: AgentCommand.msg  AgentState.msg  FreiCarGoTo.msg  FreiCarHalt.msg  FreiCarStatus.msg
base/freicar_msgs/srv/: Track.srv  WayPoint.srv
base/freicar_setting/: CMakeLists.txt  README.MD  package.xml
base/freicar_setting/include/freicar_setting/: settings.h
base/freicar_setting/param/: freicar_settings.yaml
base/freicar_setting/src/: main.cpp
base/raiscar_msgs/: README.md
base/raiscar_msgs/msg/: BatteryCalibration.msg  BatteryReport.msg  ControlReport.msg  PowerReport.msg
freicar-perception/: CMakeLists.txt  package.xml
freicar-perception/scripts/: controller_node.py  flowlitenet.engine  inference_node.py  inference_node_notrt_bag.py
