<?xml version="1.0"?>
<package format="2">
  <name>freicar_carla_proxy</name>
  <version>0.0.0</version>
  <description>egocar sim proxy package</description>

  <maintainer email="johan@vertens.de">johan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>raiscar_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- forcing this build because it's usually launched before this node-->
  <build_depend>freicar_setting</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
