<?xml version="1.0"?>
<package format="2">
  <name>freicar_setting</name>
  <version>0.0.0</version>
  <description>freicar setting package</description>

  <maintainer email="bahadorm@informatik.uni-freiburg.de">hosein</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rosgraph_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
